--- a/Tugasprak3/About.html
+++ b/Tugasprak3/About.html
@@ -10,10 +10,19 @@
 		<header>
 			<h1 style="text-align: center;"><img src="download.png" alt="simbol">FAMOUS CULTURE<img src="download.png" alt="simbol"></h1>
 			<ul>
-				<li><a href="Home.html">Home</a></li>
-				<li><a href="Menu.html">Menu</a></li>
-				<li><a href="About.html">About</a></li>
-				<li><a href="Blog">Blog</a></li>
+				<li><a href="Home.html"><button class="mainmenubtn">Home</button></a></li>
+				<li><a href="Menu.html"><div class="dropdown">
+				<button class="mainmenubtn">Menu</button>
+					<div class="dropdown-child">
+						<a href="Menu1.html">Budaya K-POP</a>
+						<a href="Menu2.html">Bahasa & Cara Komunikasi</a>
+						<a href="Menu3.html">Fashion Terkini</a>
+						<a href="Menu4.html">Hari Perayaan</a>
+						<a href="Menu5">Hal – hal yang Tabu</a>
+						<a href="Menu6">Kota-kota Terkenal di Drakor</a>
+					</div></a></li>
+				<li><a href="About.html"><button class="mainmenubtn">About</button></a></li>
+				<li><a href="Blog"><button class="mainmenubtn">Blog</button></a></li>
 				<li><input class="search" type="text" placeholder="Search..." required>	
 				<input class="button" type="button" value="Cari"></li>
 			</ul>
