--- a/Tugasprak3/About.html
+++ b/Tugasprak3/About.html
@@ -14,7 +14,7 @@
 				<li><a href="Menu.html"><div class="dropdown">
 				<button class="mainmenubtn">Menu</button>
 					<div class="dropdown-child">
-						<a href="Menu1.html">Budaya K-POP</a>
+						<a href="Menu1.html">Budaya Terkini</a>
 						<a href="Menu2.html">Bahasa & Cara Komunikasi</a>
 						<a href="Menu3.html">Fashion Terkini</a>
 						<a href="Menu4.html">Hari Perayaan</a>
