--- a/Tugasprak3/Menu.html
+++ b/Tugasprak3/Menu.html
@@ -14,7 +14,7 @@
 				<li><a href="Menu.html"><div class="dropdown">
 				<button class="mainmenubtn">Menu</button>
 					<div class="dropdown-child">
-						<a href="Menu1.html">Budaya K-POP</a>
+						<a href="Menu1.html">Budaya Terkini</a>
 						<a href="Menu2.html">Bahasa & Cara Komunikasi</a>
 						<a href="Menu3.html">Fashion Terkini</a>
 						<a href="Menu4.html">Hari Perayaan</a>
@@ -32,6 +32,17 @@
 			<h4>~~세계에서 유명한 문화: 한국~~</h4>
 		</nav>
 		<div class="Menu">
+			<p>Sebelum Anda pergi liburan ke Korea Selatan, tidak afdhal rasanya kalau belum mengetahui tentang budaya 
+			Korea Selatan yang unik ini. Budaya kontemporer Korea Selatan berkembang dari budaya tradisional Korea yang 
+			biasa pada suku nomaden Korea awal. Dengan mempertahankan ribuan tahun budaya Korea kuno, dengan pengaruh dari 
+			budaya Cina kuno, Korea Selatan berpisah pada jalur pengembangan budayanya sendiri jauh dari budaya Korea Utara 
+			sejak dibaginya Korea pada tahun 1948.
+
+			Industrialisasi, urbanisasi dan westernisasi di Korea Selatan, khususnya Seoul, telah membawa banyak perubahan pada gaya hidup 
+			orang Korea. Saat ini, banyak elemen budaya Korea Selatan, terutama budaya Korean Pop dan dunia perfilm-an nya yang sangat 
+			populer telah menyebar ke seluruh dunia, apalagi di Indonesia yang banyak sekali remaja yang menggandrungi dunia k-pop. 
+			Selain budaya Korea Selatan K-pop, Korea Selatan juga menyimpan banyak sekali keindahan dari tempat wisata Korea Selatan yang 
+			bisa Anda jelajahi untuk liburan terindah Anda. Mari kita simak hal-hal apa saja yang perlu diketahui tentang budaya Korea Selatan.</p>
 		</div>
 		<footer>Copyright &copy;</footer>
 </body>
